Esolano/DEV feat: Se sigue con el diseño del formulario
Queda en base borrador, falta llenar las algunas tablas de la db

--- a/FrontEnd/WEBSchool/Index.html
+++ b/FrontEnd/WEBSchool/Index.html
@@ -40,7 +40,11 @@
             <p>Mantén el control de tus calificaciones y avances académicos sin complicaciones. Con esta herramienta podrás registrar cada asignatura, visualizar tus resultados y detectar oportunidades de mejora. Evita perder información importante y accede a tus datos en cualquier momento.</p>
         </div>
     </div>
-    <div class="container_card">
+    <div class="container_Formulario">
+        <h1>Bienvenido al Registro de Su Colegio</h1>
+        <div class="Formulario">
+
+        </div>
         
     </div>
 
